--- a/WebAPI.Web/Views/Admin/Index.cshtml
+++ b/WebAPI.Web/Views/Admin/Index.cshtml
@@ -4,15 +4,19 @@
 
 <!DOCTYPE html>
 
-<html ng-app>
+<html ng-app="myModule">
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Index</title>
     <script src="~/Scripts/plugins/angular/angular.js"></script>
+    <script src="~/Scripts/spa/app.js"></script>
 </head>
 <body>
-    <div>
-        10+20={{10+20}}
+    <div ng-controller="myController">
+        {{message}}
+    </div>
+    <div ng-controller="myController1">
+        {{message}}
     </div>
 </body>
 </html>
