--- a/WebAPI.Web/Views/Admin/Index.cshtml
+++ b/WebAPI.Web/Views/Admin/Index.cshtml
@@ -195,9 +195,15 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="../../index3.html" class="nav-link">
+                                    <a ui-sref="product_categories" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
-                                        <p>Dashboard v3</p>
+                                        <p>danh mục sản phẩm</p>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a ui-sref="products" class="nav-link">
+                                        <i class="far fa-circle nav-icon"></i>
+                                        <p>sản phẩm</p>
                                     </a>
                                 </li>
                             </ul>
@@ -740,10 +746,15 @@
     <script src="/Assets/admin/libs/angular-ui-router/release/angular-ui-router.js"></script>
 
     <script src="~/app/shared/modules/grocery.common.js"></script>
+    <script src="~/app/shared/services/apiService.js"></script>
+
     <script src="~/app/components/products/products.module.js"></script>
+    <script src="~/app/components/product_categories/productCategories.module.js"></script>
     <script src="~/app/app.js"></script>
+
     <script src="~/app/components/products/productAddController.js"></script>
     <script src="~/app/components/products/productListController.js"></script>
+    <script src="~/app/components/product_categories/producteCategoryListController.js"></script>
     <script src="~/app/components/home/homeController.js"></script>
 </body>
 </html>
