--- a/WebAPI.Web/Views/Admin/Index.cshtml
+++ b/WebAPI.Web/Views/Admin/Index.cshtml
@@ -746,6 +746,7 @@
     <script src="/Assets/admin/libs/angular-ui-router/release/angular-ui-router.js"></script>
 
     <script src="~/app/shared/modules/grocery.common.js"></script>
+    <script src="~/app/shared/filters/statusFilter.js"></script>
     <script src="~/app/shared/services/apiService.js"></script>
 
     <script src="~/app/components/products/products.module.js"></script>
