add notification Service

--- a/WebAPI.Web/Views/Admin/Index.cshtml
+++ b/WebAPI.Web/Views/Admin/Index.cshtml
@@ -17,6 +17,9 @@
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     <!-- overlayScrollbars -->
     <link rel="stylesheet" href="/Assets/admin/css/adminlte.min.css">
+    <!--toastr-->
+    <link href="/Assets/admin/libs/toastr/toastr.css" rel="stylesheet" />
+    <!--/toastr-->
     <!-- Google Font: Source Sans Pro -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 </head>
@@ -744,10 +747,13 @@
     <!--Begin Angularjs-->
     <script src="/Assets/admin/libs/angular/angular.js"></script>
     <script src="/Assets/admin/libs/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="~/Assets/admin/libs/toastr/toastr.js"></script>
 
     <script src="~/app/shared/modules/grocery.common.js"></script>
     <script src="~/app/shared/filters/statusFilter.js"></script>
     <script src="~/app/shared/services/apiService.js"></script>
+    <script src="~/app/shared/directives/pagerDiretive.js"></script>
+    <script src="~/app/shared/services/notificationService.js"></script>
 
     <script src="~/app/components/products/products.module.js"></script>
     <script src="~/app/components/product_categories/productCategories.module.js"></script>
