--- a/WebAPI.Web/app/components/product_categories/productCategoryListView.html
+++ b/WebAPI.Web/app/components/product_categories/productCategoryListView.html
@@ -16,11 +16,21 @@
 </section>
 
 <!-- Main content -->
+
 <div class="row">
+
     <div class="col-md-12">
         <div class="card">
             <div class="card-header">
                 <h3 class="card-title">Danh mục sản phẩm</h3>
+            </div>
+            <div class="col-md-6">
+                <div class="input-group" style=" padding:15px">
+                    <input type="text" class="form-control" ng-model="keyword" placeholder="Search for...">
+                    <span class="input-group-btn">
+                        <button class="btn btn-default" type="button" ng-click="search()">Search</button>
+                    </span>
+                </div><!-- /input-group -->
             </div>
             <!-- /.card-header -->
             <div class="card-body">
@@ -57,13 +67,15 @@
             </div>
             <!-- /.card-body -->
             <div class="card-footer clearfix">
-                <ul class="pagination pagination-sm m-0 float-right">
+
+                <pager-directive page="{{page}}" custom-path="{{customPath}}" pages-count="{{pagesCount}}" total-count="{{totalCount}}" search-func="getProductCategories(page)"></pager-directive>
+                <!--<ul class="pagination pagination-sm m-0 float-right">
                     <li class="page-item"><a class="page-link" href="#">&laquo;</a></li>
                     <li class="page-item"><a class="page-link" href="#">1</a></li>
                     <li class="page-item"><a class="page-link" href="#">2</a></li>
                     <li class="page-item"><a class="page-link" href="#">3</a></li>
                     <li class="page-item"><a class="page-link" href="#">&raquo;</a></li>
-                </ul>
+                </ul>-->
             </div>
         </div>
     </div>
