--- a/WebAPI.Web/Views/Admin/Index.cshtml
+++ b/WebAPI.Web/Views/Admin/Index.cshtml
@@ -749,20 +749,26 @@
     <script src="/Assets/admin/libs/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="~/Assets/admin/libs/toastr/toastr.js"></script>
 
+    <!--service-->
     <script src="~/app/shared/modules/grocery.common.js"></script>
     <script src="~/app/shared/filters/statusFilter.js"></script>
     <script src="~/app/shared/services/apiService.js"></script>
     <script src="~/app/shared/directives/pagerDiretive.js"></script>
     <script src="~/app/shared/services/notificationService.js"></script>
 
+    <script src="~/app/shared/services/commonService.js"></script>
+
+    <!--components-->
     <script src="~/app/components/products/products.module.js"></script>
     <script src="~/app/components/product_categories/productCategories.module.js"></script>
     <script src="~/app/app.js"></script>
 
     <script src="~/app/components/products/productAddController.js"></script>
+
     <script src="~/app/components/products/productListController.js"></script>
     <script src="~/app/components/product_categories/producteCategoryListController.js"></script>
     <script src="~/app/components/product_categories/productCategoryAddController.js"></script>
+    <script src="~/app/components/product_categories/productCategoryEditController.js"></script>
     <script src="~/app/components/home/homeController.js"></script>
 </body>
 </html>
