--- a/WebAPI.Web/app/components/product_categories/productCategoryListView.html
+++ b/WebAPI.Web/app/components/product_categories/productCategoryListView.html
@@ -37,9 +37,9 @@
                     <div class="input-group" style=" padding:15px">
                         <button class="btn btn-success" type="button" ui-sref="add_product_category">Thêm mới</button>
                     </div>
-                    </div>
                 </div>
-         
+            </div>
+
             <!-- /.card-header -->
             <div class="card-body">
                 <table class="table table-bordered">
@@ -66,7 +66,7 @@
                                 </span>
                             </td>
                             <td>
-                                <button class="btn btn-primary"><i class="fa fa-pencil-alt"></i></button>
+                                <button class="btn btn-primary" ui-sref="edit_product_category({id:item.ID})"><i class="fa fa-pencil-alt"></i></button>
                                 <button class="btn btn-danger"><i class="fa fa-trash"></i></button>
                             </td>
                         </tr>
@@ -78,12 +78,12 @@
 
                 <pager-directive page="{{page}}" custom-path="{{customPath}}" pages-count="{{pagesCount}}" total-count="{{totalCount}}" search-func="getProductCategories(page)"></pager-directive>
                 <!--<ul class="pagination pagination-sm m-0 float-right">
-            <li class="page-item"><a class="page-link" href="#">&laquo;</a></li>
-            <li class="page-item"><a class="page-link" href="#">1</a></li>
-            <li class="page-item"><a class="page-link" href="#">2</a></li>
-            <li class="page-item"><a class="page-link" href="#">3</a></li>
-            <li class="page-item"><a class="page-link" href="#">&raquo;</a></li>
-        </ul>-->
+                    <li class="page-item"><a class="page-link" href="#">&laquo;</a></li>
+                    <li class="page-item"><a class="page-link" href="#">1</a></li>
+                    <li class="page-item"><a class="page-link" href="#">2</a></li>
+                    <li class="page-item"><a class="page-link" href="#">3</a></li>
+                    <li class="page-item"><a class="page-link" href="#">&raquo;</a></li>
+                </ul>-->
             </div>
         </div>
     </div>
