--- a/WebAPI.Web/app/components/product_categories/ProductCategoryAddView.html
+++ b/WebAPI.Web/app/components/product_categories/ProductCategoryAddView.html
@@ -30,19 +30,24 @@
             <div class="form-group row">
                 <label for="inputEmail3" class="col-sm-2 col-form-label">Tên Danh Mục</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" name="name" ng-model="productCategory.Name">
+                    <input type="text" class="form-control" ng-maxlength="256" ng-change="GetSeoTitle()" required name="name" ng-model="productCategory.Name">
+                    <span ng-show="frmAddProductCategory.name.$invalid" class="has-error">Phải nhập tên danh mục.</span>
+                    <span ng-show="frmAddProductCategory.name.$error.maxlength" class="has-error">Tên danh mục vượt quá 256 kí tự</span>
                 </div>
             </div>
             <div class="form-group row">
                 <label for="inputEmail3" class="col-sm-2 col-form-label">Tiêu Đề SEO</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" name="Alias" ng-model="productCategory.Alias">
+                    <input type="text" class="form-control" ng-maxlength="256" name="Alias" required ng-model="productCategory.Alias">
+                    <span ng-show="frmAddProductCategory.Alias.$invalid" class="has-error">phải nhập tiêu đề SEO</span>
+                    <span ng-show="frmAddProductCategory.Alias.$error.maxlength" class="has-error">Tiêu đề SEO vượt quá 256 kí tự</span>
                 </div>
             </div>
             <div class="form-group row">
                 <label for="inputEmail3" class="col-sm-2 col-form-label">Mô Tả Ngắn</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" name="Description" ng-model="productCategory.Description">
+                    <input type="text" class="form-control" ng-maxlength="500" name="Description" ng-model="productCategory.Description">
+                    <span ng-show="frmAddProductCategory.Description.$error.maxlength" class="has-error">Mô Tả Ngắn vượt quá 500 kí tự</span>
                 </div>
             </div>
             <div class="form-group row">
@@ -59,14 +64,16 @@
             <div class="form-group row">
                 <label for="inputEmail3" class="col-sm-2 col-form-label">Thứ tự hiện thị</label>
                 <div class="col-sm-10">
-                    <input type="number" class="form-control" name="DisplayOrder" ng-model="productCategory.DisplayOrder">
+                    <input type="number" class="form-control" required name="DisplayOrder" ng-model="productCategory.DisplayOrder">
+                    <span ng-show="frmAddProductCategory.DisplayOrder.$invalid" class="has-error">phải nhập thứ tự</span>
                 </div>
             </div>
 
             <div class="form-group row">
                 <label for="inputEmail3" class="col-sm-2 col-form-label">Hình Ảnh</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" name="Image" ng-model="productCategory.Image">
+                    <input type="text" class="form-control" ng-maxlength="256" name="Image" ng-model="productCategory.Image">
+                    <span ng-show="frmAddProductCategory.Image.$error.maxlength" class="has-error">Hình Ảnh vượt quá 256 kí tự</span>
                 </div>
             </div>
 
@@ -104,7 +111,7 @@
         </div>
         <!-- /.card-body -->
         <div class="card-footer">
-            <button type="submit" class="btn btn-info">Lưu</button>
+            <button type="submit" ng-disabled="frmAddProductCategory.$invalid" class="btn btn-info">Lưu</button>
             <button ui-sref="product_categories" class="btn btn-default float-right">quay lại</button>
         </div>
         <!-- /.card-footer -->
