--- a/WebAPI.Web/app/components/product_categories/productCategoryListView.html
+++ b/WebAPI.Web/app/components/product_categories/productCategoryListView.html
@@ -36,6 +36,7 @@
                 <div class="col-md-6 right">
                     <div class="input-group" style=" padding:15px">
                         <button class="btn btn-success" type="button" ui-sref="add_product_category">Thêm mới</button>
+                        <button class="btn btn-danger" type="button" ng-click="deleteMultiple()" id="btnDelete" disabled> Xoá</button>
                     </div>
                 </div>
             </div>
@@ -45,6 +46,9 @@
                 <table class="table table-bordered">
                     <thead>
                         <tr>
+                            <td>
+                                <input name="all" type="checkbox" ng-click="selectAll()" />
+                            </td>
                             <th style="width: 5%">ID</th>
                             <th style="width: 50%">Tên Danh mục</th>
                             <th style="width: 20%">Ngày tạo</th>
@@ -54,6 +58,7 @@
                     </thead>
                     <tbody>
                         <tr ng-repeat="item in productCategories">
+                            <td><input type="checkbox" ng-model="item.checked" name="all" /></td>
                             <td>{{item.ID}}</td>
                             <td>{{item.Name}}</td>
                             <td>
@@ -67,7 +72,7 @@
                             </td>
                             <td>
                                 <button class="btn btn-primary" ui-sref="edit_product_category({id:item.ID})"><i class="fa fa-pencil-alt"></i></button>
-                                <button class="btn btn-danger"><i class="fa fa-trash"></i></button>
+                                <button class="btn btn-danger" ng-click="deleteProductCategory(item.ID)"><i class="fa fa-trash"></i></button>
                             </td>
                         </tr>
                     </tbody>
