--- a/WebAPI.Web/Views/Admin/Index.cshtml
+++ b/WebAPI.Web/Views/Admin/Index.cshtml
@@ -7,7 +7,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>AdminLTE 3 | Blank Page</title>
+    <title>Trang Quản Trị Hệ Thống</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="/Assets/admin/css/adminlte.min.css">
     <!--toastr-->
     <link href="/Assets/admin/libs/toastr/toastr.css" rel="stylesheet" />
+    <link href="~/Assets/admin/css/custom.css" rel="stylesheet" />
     <!--/toastr-->
     <!-- Google Font: Source Sans Pro -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
@@ -745,10 +746,13 @@
     <!-- AdminLTE for demo purposes -->
     <script src="/Assets/admin/js/demo.js"></script>
     <!--Begin Angularjs-->
+    <!--lib-->
     <script src="/Assets/admin/libs/angular/angular.js"></script>
     <script src="/Assets/admin/libs/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="~/Assets/admin/libs/toastr/toastr.js"></script>
-
+    <script src="~/Assets/admin/libs/bootbox/bootbox.js"></script>
+    <script src="~/Assets/admin/libs/ngBootbox/ngBootbox.js"></script>
+    <!--/lib-->
     <!--service-->
     <script src="~/app/shared/modules/grocery.common.js"></script>
     <script src="~/app/shared/filters/statusFilter.js"></script>
