--- a/WebAPI.Web/app/components/products/productListView.html
+++ b/WebAPI.Web/app/components/products/productListView.html
@@ -71,7 +71,7 @@
                                 </span>
                             </td>
                             <td>
-                                <button class="btn btn-primary" ui-sref="edit_product({id:item.ID})"><i class="fa fa-pencil-alt"></i></button>
+                                <button class="btn btn-primary" ui-sref="product_edit({id:item.ID})"><i class="fa fa-pencil-alt"></i></button>
                                 <button class="btn btn-danger" ng-click="deleteProduct(item.ID)"><i class="fa fa-trash"></i></button>
                             </td>
                         </tr>
