--- a/WebAPI.Web/app/components/products/productAddView.html
+++ b/WebAPI.Web/app/components/products/productAddView.html
@@ -62,7 +62,7 @@
                 </div>
             </div>
             <div class="form-group row">
-                <label for="inputEmail3" class="col-sm-2 col-form-label">Bảo hành</label>
+                <label for="inputEmail3" class="col-sm-2 col-form-label">Bảo hành(tháng)</label>
                 <div class="col-sm-10">
                     <input type="number" class="form-control" name="Warranty" ng-model="product.Warranty">
                 </div>
@@ -95,6 +95,12 @@
                     <textarea class="form-control" name="Content" ckeditor="ckeditorOptions"
                               ng-model="product.Content">
                     </textarea>
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="inputEmail3" class="col-sm-2 col-form-label">Tags</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" name="Tags" ng-model="product.Tags">
                 </div>
             </div>
             <div class="form-group row">
