--- a/WebAPI.Web/Views/Admin/Index.cshtml
+++ b/WebAPI.Web/Views/Admin/Index.cshtml
@@ -193,12 +193,7 @@
                                         <p>sản phẩm</p>
                                     </a>
                                 </li>
-                                <li class="nav-item">
-                                    <a ui-sref="product_add" class="nav-link">
-                                        <i class="far fa-circle nav-icon"></i>
-                                        <p>Thêm mới sản phẩm</p>
-                                    </a>
-                                </li>
+
                                 <li class="nav-item">
                                     <a ui-sref="product_categories" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
@@ -773,11 +768,13 @@
     <script src="~/app/app.js"></script>
 
     <script src="~/app/components/products/productAddController.js"></script>
-
+    <script src="~/app/components/products/productEditController.js"></script>
     <script src="~/app/components/products/productListController.js"></script>
+
     <script src="~/app/components/product_categories/producteCategoryListController.js"></script>
     <script src="~/app/components/product_categories/productCategoryAddController.js"></script>
     <script src="~/app/components/product_categories/productCategoryEditController.js"></script>
+
     <script src="~/app/components/home/homeController.js"></script>
 </body>
 </html>
