--- a/WebAPI.Web/app/shared/views/baseView.html
+++ b/WebAPI.Web/app/shared/views/baseView.html
@@ -113,8 +113,9 @@
                     <a href="#" class="dropdown-item dropdown-footer">See All Notifications</a>
                 </div>
             </li>
+
             <li class="nav-item">
-                <a class="nav-link" data-widget="control-sidebar" data-slide="true" href="#" role="button">
+                <a class="nav-link" data-widget="control-sidebar" data-slide="true" href="javascript:void(0);" role="button">
                     <i class="fas fa-th-large"></i>
                 </a>
             </li>
@@ -699,6 +700,7 @@
     <!-- Control Sidebar -->
     <aside class="control-sidebar control-sidebar-dark">
         <!-- Control sidebar content goes here -->
+        <a href="#" ng-click="logout()" class="btn btn-default btn btn-flat">Đăng Xuất</a>
     </aside>
     <!-- /.control-sidebar -->
 </div>
