modify components (controller api)

--- a/WebAPI.Web/app/components/home/homeView.html
+++ b/WebAPI.Web/app/components/home/homeView.html
@@ -3,7 +3,7 @@
     <div class="container-fluid">
         <div class="row mb-2">
             <div class="col-sm-6">
-                <h1>Blank Page</h1>
+                <h1>Trang chủ</h1>
             </div>
             <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
@@ -16,45 +16,3 @@
 </section>
 
 <!-- Main content -->
-<div class="row">
-    <div class="col-md-12">
-        <div class="card">
-            <div class="card-header">
-                <h3 class="card-title">Bordered Table</h3>
-            </div>
-            <!-- /.card-header -->
-            <div class="card-body">
-                <table class="table table-bordered">
-                    <thead>
-                        <tr>
-                            <th style="width: 10px">ID</th>
-                            <th>Tên Danh mục</th>
-                            <th>Ngày tạo</th>
-                            <th style="width: 40px">Trạng Thái</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr ng-repeat="item in productCategories">
-                            <td>{{item.ID}}</td>
-                            <td>{{item.Name}}</td>
-                            <td>
-                                {{item.CreateDate}}
-                            </td>
-                            <td><span class="badge bg-danger">{{item.Status}}</span></td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-            <!-- /.card-body -->
-            <div class="card-footer clearfix">
-                <ul class="pagination pagination-sm m-0 float-right">
-                    <li class="page-item"><a class="page-link" href="#">&laquo;</a></li>
-                    <li class="page-item"><a class="page-link" href="#">1</a></li>
-                    <li class="page-item"><a class="page-link" href="#">2</a></li>
-                    <li class="page-item"><a class="page-link" href="#">3</a></li>
-                    <li class="page-item"><a class="page-link" href="#">&raquo;</a></li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</div>
