--- a/WebAPI.Web/app/components/login/loginView.html
+++ b/WebAPI.Web/app/components/login/loginView.html
@@ -8,9 +8,9 @@
             <div class="card-body login-card-body">
                 <p class="login-box-msg">Đăng nhập hệ thống</p>
 
-                <form role="form" method="post" ng-submit="loginSubmit()" ng-controller="rootController">
+                <form role="form" method="post" ng-submit="loginSubmit()">
                     <div class="input-group mb-3">
-                        <input type="email" class="form-control" placeholder="Email">
+                        <input type="text" class="form-control" placeholder="Tài khoản" ng-model="loginData.userName">
                         <div class="input-group-append">
                             <div class="input-group-text">
                                 <span class="fas fa-envelope"></span>
@@ -18,7 +18,7 @@
                         </div>
                     </div>
                     <div class="input-group mb-3">
-                        <input type="password" class="form-control" placeholder="Password">
+                        <input type="password" class="form-control" placeholder="Mật khẩu" ng-model="loginData.password">
                         <div class="input-group-append">
                             <div class="input-group-text">
                                 <span class="fas fa-lock"></span>
