--- a/WebAPI.Web/app/shared/views/baseView.html
+++ b/WebAPI.Web/app/shared/views/baseView.html
@@ -154,7 +154,7 @@
                         <a href="javascript:void(0);" class="nav-link">
                             <i class="nav-icon fas fa-tachometer-alt"></i>
                             <p>
-                                Sản Phẩm a
+                                Sản Phẩm
                                 <i class="right fas fa-angle-left"></i>
                             </p>
                         </a>
