--- a/WebAPI.Web/Views/Shared/Header.cshtml
+++ b/WebAPI.Web/Views/Shared/Header.cshtml
@@ -26,11 +26,11 @@
             <div class="col-lg-6 col-md-6">
                 <div class="header_links">
                     <ul>
-                        <li><a href="contact.html" title="Contact">Contact</a></li>
+                        <li><a href="contact.html" title="Contact">Liên Hệ</a></li>
                         <li><a href="wishlist.html" title="wishlist">My wishlist</a></li>
-                        <li><a href="my-account.html" title="My account">My account</a></li>
-                        <li><a href="cart.html" title="My cart">My cart</a></li>
-                        <li><a href="login.html" title="Login">Login</a></li>
+                        <li><a href="my-account.html" title="My account">Tài Khoản của bạn</a></li>
+                        <li><a href="/gio-hang.html" title="My cart">Giỏ Hàng</a></li>
+                        <li><a href="/dang-nhap.html" title="Login">Đăng Nhập</a></li>
                     </ul>
                 </div>
             </div>
