add detail and tag

--- a/WebAPI.Web/Views/Product/Category.cshtml
+++ b/WebAPI.Web/Views/Product/Category.cshtml
@@ -5,7 +5,7 @@
 
     ViewBag.Title = "Category";
     Layout = "~/Views/Shared/Layouts.cshtml";
-    //var category = (WebAPI.Web.Models.ProductCategoryViewModel)ViewBag.Category
+    <!--var category = (WebAPI.Web.Models.ProductCategoryViewModel)ViewBag.Category-->
 }
 
 <div class="col-lg-9 col-md-12">
