--- a/WebAPI.Web/Views/Shared/Category.cshtml
+++ b/WebAPI.Web/Views/Shared/Category.cshtml
@@ -47,18 +47,13 @@
 <!--popular tags area-->
 <div class="sidebar_widget tags mb-35">
     <div class="block_title">
-        <h3>popular tags</h3>
+        <h3>Tag phổ biến</h3>
     </div>
     <div class="block_tags">
-        <a href="#">ipod</a>
-        <a href="#">sam sung</a>
-        <a href="#">apple</a>
-        <a href="#">iphone 5s</a>
-        <a href="#">superdrive</a>
-        <a href="#">shuffle</a>
-        <a href="#">nano</a>
-        <a href="#">iphone 4s</a>
-        <a href="#">canon</a>
+        @foreach (var tag in (IEnumerable<WebAPI.Web.Models.TagViewModel>)ViewBag.ListTag)
+        {
+            <a href="/tag/@(tag.ID).html">@tag.Name</a>
+        }
     </div>
 </div>
 <!--popular tags end-->
