--- a/WebAPI.Web/app/components/products/productEditView.html
+++ b/WebAPI.Web/app/components/products/productEditView.html
@@ -82,6 +82,12 @@
                 </div>
             </div>
             <div class="form-group row">
+                <label for="inputEmail3" class="col-sm-2 col-form-label">Số lượng</label>
+                <div class="col-sm-10">
+                    <input type="number" class="form-control" name="Quantity" ng-model="product.Quantity">
+                </div>
+            </div>
+            <div class="form-group row">
                 <label for="inputEmail3" class="col-sm-2 col-form-label">Hình Ảnh</label>
                 <div class="col-sm-10">
                     <input type="text" class="form-control" ng-maxlength="256" name="Image" ng-model="product.Image">
