add page giới thiệu

--- a/WebAPI.Web/Views/Home/Index.cshtml
+++ b/WebAPI.Web/Views/Home/Index.cshtml
@@ -25,7 +25,7 @@
         }
 
         <div class="block_content">
-            <p>2  products</p>
+            <p>3  Sản phẩm</p>
             <a href="san-pham-ban-chay.html">» Xem tất cả</a>
         </div>
     </div>
