--- a/WebAPI.Web/Views/Shared/Header.cshtml
+++ b/WebAPI.Web/Views/Shared/Header.cshtml
@@ -113,12 +113,12 @@
                         <nav>
                             <ul>
                                 <li class="active">
-                                    <a href="index.html">Home</a>
+                                    <a href="/Home/Index">TRANG CHỦ</a>
                                     <div class="mega_menu jewelry">
                                         <div class="mega_items jewelry">
                                             <ul>
-                                                <li><a href="index.html">Home 1</a></li>
-                                                <li><a href="index-2.html">Home 2</a></li>
+                                                <li><a href="#">Home 1</a></li>
+                                                <li><a href="#">Home 2</a></li>
                                             </ul>
                                         </div>
                                     </div>
@@ -237,8 +237,8 @@
                                             <div class="mega_items">
                                                 <h3><a href="#">Column2</a></h3>
                                                 <ul>
-                                                    <li><a href="blog.html">Blog </a></li>
-                                                    <li><a href="blog-details.html">Blog  Details </a></li>
+                                                    <li><a href="blog.html">VỀ CHÚNG TÔI </a></li>
+                                                    <li><a href="/trang/gioi-thieu.html">GIỚI THIỆU </a></li>
                                                     <li><a href="blog-fullwidth.html">Blog FullWidth</a></li>
                                                     <li><a href="blog-sidebar.html">Blog  Sidebar</a></li>
                                                     <li><a href="faq.html">Frequently Questions</a></li>
@@ -248,7 +248,7 @@
                                             <div class="mega_items">
                                                 <h3><a href="#">Column3</a></h3>
                                                 <ul>
-                                                    <li><a href="contact.html">Contact</a></li>
+                                                    <li><a href="contact.html">LIÊN HỆ VỚI CHÚNG TÔI</a></li>
                                                     <li><a href="cart.html">cart</a></li>
                                                     <li><a href="checkout.html">Checkout  </a></li>
                                                     <li><a href="wishlist.html">Wishlist</a></li>
@@ -260,18 +260,18 @@
                                 </li>
 
                                 <li>
-                                    <a href="blog.html">blog</a>
+                                    <a href="/trang/gioi-thieu.html">VỀ CHÚNG TÔI</a>
                                     <div class="mega_menu jewelry">
                                         <div class="mega_items jewelry">
                                             <ul>
-                                                <li><a href="blog-details.html">blog details</a></li>
+                                                <li><a href="/trang/gioi-thieu.html">GIỚI THIỆU</a></li>
                                                 <li><a href="blog-fullwidth.html">blog fullwidth</a></li>
                                                 <li><a href="blog-sidebar.html">blog sidebar</a></li>
                                             </ul>
                                         </div>
                                     </div>
                                 </li>
-                                <li><a href="contact.html">contact us</a></li>
+                                <li><a href="#">LIÊN HỆ VỚI CHÚNG TÔI</a></li>
                             </ul>
                         </nav>
                     </div>
