add api cho Pages

--- a/WebAPI.Web/app/shared/views/baseView.html
+++ b/WebAPI.Web/app/shared/views/baseView.html
@@ -178,21 +178,21 @@
                         <a href="javascript:void(0);" class="nav-link">
                             <i class="nav-icon fas fa-table"></i>
                             <p>
-                                Tables
+                                Chức Năng
                                 <i class="fas fa-angle-left right"></i>
                             </p>
                         </a>
                         <ul class="nav nav-treeview">
                             <li class="nav-item">
-                                <a href="../tables/simple.html" class="nav-link">
+                                <a ui-sref="pages" class="nav-link">
                                     <i class="far fa-circle nav-icon"></i>
-                                    <p>Simple Tables</p>
+                                    <p>Page</p>
                                 </a>
                             </li>
                             <li class="nav-item">
                                 <a href="../tables/data.html" class="nav-link">
                                     <i class="far fa-circle nav-icon"></i>
-                                    <p>DataTables</p>
+                                    <p>Footer</p>
                                 </a>
                             </li>
                             <li class="nav-item">
@@ -201,17 +201,6 @@
                                     <p>jsGrid</p>
                                 </a>
                             </li>
-                        </ul>
-                    </li>
-                    <li class="treeview">
-                        <a href="javascript:void(0);">
-                            <i class="fa fa-files-o"></i>
-                            <span>Sản phẩm</span>
-                            <span class="label label-primary pull-right">4</span>
-                        </a>
-                        <ul class="treeview-menu">
-                            <li><a ui-sref="product_categories"><i class="fa fa-circle-o"></i> Danh mục sản phẩm</a></li>
-                            <li><a ui-sref="products"><i class="fa fa-circle-o"></i> Sản phẩm</a></li>
                         </ul>
                     </li>
                 </ul>
