--- a/WebAPI.Web/Views/Admin/Index.cshtml
+++ b/WebAPI.Web/Views/Admin/Index.cshtml
@@ -71,6 +71,7 @@
     <!--components-->
     <script src="~/app/components/products/products.module.js"></script>
     <script src="~/app/components/product_categories/productCategories.module.js"></script>
+    <script src="~/app/components/page/pages.module.js"></script>
     <script src="~/app/app.js"></script>
     <script src="~/app/components/home/rootController.js"></script>
 
@@ -81,6 +82,10 @@
     <script src="~/app/components/product_categories/producteCategoryListController.js"></script>
     <script src="~/app/components/product_categories/productCategoryAddController.js"></script>
     <script src="~/app/components/product_categories/productCategoryEditController.js"></script>
+
+    <script src="~/app/components/page/pagesListController.js"></script>
+    <script src="~/app/components/page/pagesAddController.js"></script>
+    <script src="~/app/components/page/pagesEditController.js"></script>
 
     <script src="~/app/components/home/homeController.js"></script>
     <script src="~/app/components/login/loginController.js"></script>
