add google map api

--- a/WebAPI.Web/Views/Shared/_Layouts.cshtml
+++ b/WebAPI.Web/Views/Shared/_Layouts.cshtml
@@ -149,5 +149,6 @@
     <script src="/Assets/client/js/plugins.js"></script>
     <script src="/Assets/client/js/main.js"></script>
     <script src="~/Assets/client/js/Common.js"></script>
+    @RenderSection("footerJS", required: false)
 </body>
 </html>
