--- a/WebAPI.Web/Views/Shared/Header.cshtml
+++ b/WebAPI.Web/Views/Shared/Header.cshtml
@@ -26,7 +26,7 @@
             <div class="col-lg-6 col-md-6">
                 <div class="header_links">
                     <ul>
-                        <li><a href="contact.html" title="Contact">Liên Hệ</a></li>
+                        <li><a href="/lien-he.html" title="Contact">Liên Hệ</a></li>
                         <li><a href="wishlist.html" title="wishlist">My wishlist</a></li>
                         <li><a href="my-account.html" title="My account">Tài Khoản của bạn</a></li>
                         <li><a href="/gio-hang.html" title="My cart">Giỏ Hàng</a></li>
@@ -265,7 +265,7 @@
                                         <div class="mega_items jewelry">
                                             <ul>
                                                 <li><a href="/trang/gioi-thieu.html">GIỚI THIỆU</a></li>
-                                                <li><a href="blog-fullwidth.html">blog fullwidth</a></li>
+                                                <li><a href="/lien-he.html">Liên Hệ</a></li>
                                                 <li><a href="blog-sidebar.html">blog sidebar</a></li>
                                             </ul>
                                         </div>
