tạo trang đăng kí với captcha

--- a/WebAPI.Web/Views/Shared/Header.cshtml
+++ b/WebAPI.Web/Views/Shared/Header.cshtml
@@ -31,6 +31,7 @@
                         <li><a href="my-account.html" title="My account">Tài Khoản của bạn</a></li>
                         <li><a href="/gio-hang.html" title="My cart">Giỏ Hàng</a></li>
                         <li><a href="/dang-nhap.html" title="Login">Đăng Nhập</a></li>
+                        <li><a href="/dang-ki.html" title="register">Đăng Kí</a></li>
                     </ul>
                 </div>
             </div>
