--- a/WebAPI.Web/Views/Admin/Index.cshtml
+++ b/WebAPI.Web/Views/Admin/Index.cshtml
@@ -70,6 +70,7 @@
 
     <!--components-->
     <script src="~/app/components/products/products.module.js"></script>
+    <script src="~/app/components/application_groups/applicationGroups.module.js"></script>
     <script src="~/app/components/product_categories/productCategories.module.js"></script>
     <script src="~/app/components/page/pages.module.js"></script>
     <script src="~/app/app.js"></script>
@@ -86,6 +87,10 @@
     <script src="~/app/components/page/pagesListController.js"></script>
     <script src="~/app/components/page/pagesAddController.js"></script>
     <script src="~/app/components/page/pagesEditController.js"></script>
+
+    <script src="~/app/components/application_groups/applicationGroupAddController.js"></script>
+    <script src="~/app/components/application_groups/applicationGroupEditController.js"></script>
+    <script src="~/app/components/application_groups/applicationGroupListController.js"></script>
 
     <script src="~/app/components/home/homeController.js"></script>
     <script src="~/app/components/login/loginController.js"></script>
