--- a/WebAPI.Web/Views/Shared/_Layouts.cshtml
+++ b/WebAPI.Web/Views/Shared/_Layouts.cshtml
@@ -145,8 +145,8 @@
 
     <script src="/Assets/admin/libs/jqueri-ui/jquery-ui.min.js"></script>
     <script src="/Assets/admin/libs/mustache/mustache.js"></script>
-    <script src="/Assets/admin/libs/jquery-validation/dist/jquery.validate.js"></script>
-    <script src="/Assets/admin/libs/jquery-validation/dist/additional-methods.min.js"></script>
+    <script src="~/Assets/admin/libs/jquery-validation/dist/jquery.validate.js"></script>
+    <script src="~/Assets/admin/libs/jquery-validation/dist/additional-methods.min.js"></script>
 
     <script src="/Assets/client/js/popper.js"></script>
     <script src="/Assets/client/js/bootstrap.min.js"></script>
