--- a/WebAPI.Web/app/shared/views/baseView.html
+++ b/WebAPI.Web/app/shared/views/baseView.html
@@ -203,6 +203,36 @@
                             </li>
                         </ul>
                     </li>
+                    <li class="nav-item has-treeview">
+                        <a href="javascript:void(0);" class="nav-link">
+                            <i class="nav-icon fas fa-tachometer-alt"></i>
+                            <p>
+                                Hệ thống
+                                <i class="right fas fa-angle-left"></i>
+                            </p>
+                        </a>
+                        <ul class="nav nav-treeview">
+                            <li class="nav-item">
+                                <a ui-sref="application_groups" class="nav-link">
+                                    <i class="far fa-circle nav-icon"></i>
+                                    <p>Nhóm người dùng</p>
+                                </a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a ui-sref="product_categories" class="nav-link">
+                                    <i class="far fa-circle nav-icon"></i>
+                                    <p>Quyền</p>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a ui-sref="product_categories" class="nav-link">
+                                    <i class="far fa-circle nav-icon"></i>
+                                    <p>Người dùng</p>
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
                 </ul>
             </nav>
             <!-- /.sidebar-menu -->
